merge: merge lts-4.3 ui-ngx with dev branch