@@ -1,5 +1,5 @@
 /**
- * Copyright © 2016-2024 The Thingsboard Authors
+ * Copyright © 2016-2026 The Thingsboard Authors
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -46,24 +46,23 @@ import java.util.stream.Collectors;
         nodeDetails = "Deletes key-value pairs from the message or message metadata according to the configured " +
                 "keys and/or regular expressions.<br><br>" +
                 "Output connections: <code>Success</code>, <code>Failure</code>.",
-        uiResources = {"static/rulenode/rulenode-core-config.js"},
         configDirective = "tbTransformationNodeDeleteKeysConfig",
-        icon = "remove_circle"
+        icon = "remove_circle",
+        docUrl = "https://thingsboard.io/docs/user-guide/rule-engine-2-0/nodes/transformation/delete-key-value-pairs/"
 )
 public class TbDeleteKeysNode extends TbAbstractTransformNodeWithTbMsgSource {
 
-    private TbDeleteKeysNodeConfiguration config;
     private TbMsgSource deleteFrom;
     private List<Pattern> compiledKeyPatterns;
 
     @Override
     public void init(TbContext ctx, TbNodeConfiguration configuration) throws TbNodeException {
-        this.config = TbNodeUtils.convert(configuration, TbDeleteKeysNodeConfiguration.class);
-        this.deleteFrom = config.getDeleteFrom();
+        var config = TbNodeUtils.convert(configuration, TbDeleteKeysNodeConfiguration.class);
+        deleteFrom = config.getDeleteFrom();
         if (deleteFrom == null) {
             throw new TbNodeException("DeleteFrom can't be null! Allowed values: " + Arrays.toString(TbMsgSource.values()));
         }
-        this.compiledKeyPatterns = config.getKeys().stream().map(Pattern::compile).collect(Collectors.toList());
+        compiledKeyPatterns = config.getKeys().stream().map(Pattern::compile).collect(Collectors.toList());
     }
 
     @Override
@@ -77,7 +76,7 @@ public class TbDeleteKeysNode extends TbAbstractTransformNodeWithTbMsgSource {
                 var mdKeysToDelete = metaDataMap.keySet()
                         .stream()
                         .filter(this::matches)
-                        .collect(Collectors.toList());
+                        .toList();
                 mdKeysToDelete.forEach(metaDataMap::remove);
                 metaDataCopy = new TbMsgMetaData(metaDataMap);
                 hasNoChanges = mdKeysToDelete.isEmpty();
@@ -100,7 +99,10 @@ public class TbDeleteKeysNode extends TbAbstractTransformNodeWithTbMsgSource {
             default:
                 log.debug("Unexpected DeleteFrom value: {}. Allowed values: {}", deleteFrom, TbMsgSource.values());
         }
-        ctx.tellSuccess(hasNoChanges ? msg : TbMsg.transformMsg(msg, metaDataCopy, msgDataStr));
+        ctx.tellSuccess(hasNoChanges ? msg : msg.transform()
+                .metaData(metaDataCopy)
+                .data(msgDataStr)
+                .build());
     }
 
     @Override
